--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pedido Enviado</title>
+<title>Millennial Panther</title>
 <style>
 body {
     margin: 0;
@@ -100,7 +100,7 @@ h1 {
 </div>
 <script>
 function redirectToPage() {
-    window.location.href = "outra_pagina.html"; // Altere para o nome da sua página HTML
+    window.location.href = "v1"; // Altere para o nome da sua página HTML
 }
 </script>
 </body>
