--- a/v1/index.html
+++ b/v1/index.html
@@ -3,17 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Panther Millennial</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="header">
-        <div class="container">
-            <a href="#" class="logo">
-                <img src="images/title.png" alt="Logo" class="logo-image">
-            </a>
-        </div>
-    </header>
+
 
     <section class="section section-1">
         <div class="container">
@@ -33,6 +27,17 @@
         <div class="container">
             <p class="question">Isso só vai depender de você está pronto pra poder começar?</p>
             <a href="kiwifyError404" class="btn">Clique aqui e adquira o seu treinamento 🔥</a>
+        </div>
+    </section>
+
+    <section class="section section-4">
+        <div class="container">
+            <h2>Comentários de Agradecimento</h2>
+            <ul class="comments">
+                <li class="show">"Panther Millennial mudou minha vida! Obrigado por oferecer tantas oportunidades incríveis!"</li>
+                <li>"A equipe da Panther Millennial é fenomenal! Sempre prontos para ajudar e orientar." </li>
+                <li>"Graças ao Panther Millennial, agora posso trabalhar de forma flexível e ainda ganhar dinheiro!"</li>
+            </ul>
         </div>
     </section>
 
