--- a/v1/index.html
+++ b/v1/index.html
@@ -26,7 +26,7 @@
     <section class="section section-3">
         <div class="container">
             <p class="question">Isso só vai depender de você está pronto pra poder começar?</p>
-            <a href="kiwifyError404" class="btn">Clique aqui e adquira o seu treinamento 🔥</a>
+            <a href="https://pay.kiwify.com.br/qAIJpT7" class="btn">Clique aqui e adquira o seu treinamento 🔥</a>
         </div>
     </section>
 
